# important_urgent_matrix

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
domain/: CMakeLists.txt  i_sequence.h  note.cpp  note.h  note_test.cpp  notes.cpp  notes.h  notes_test.cpp
infra/: CMakeLists.txt  file_sequence.cpp  file_sequence.h  ftx.cpp  ftx.h
usecase/: CMakeLists.txt  i_usecase.h  usecase.cpp  usecase.h
